tests/fsharp/typecheck/sigs/neg140.bsl

neg140.fs(143,23,143,70): typecheck error FS0001: The types 'int32, uint32' do not support the operator '+'

neg140.fs(143,27,143,29): typecheck error FS0039: The value or constructor 'P1' is not defined.

neg140.fs(144,22,144,69): typecheck error FS0001: The types 'int32, uint32' do not support the operator '+'

neg140.fs(144,25,144,27): typecheck error FS0039: The value or constructor 'P1' is not defined.

neg140.fs(145,22,145,69): typecheck error FS0001: The types 'int32, uint32' do not support the operator '+'

neg140.fs(145,25,145,27): typecheck error FS0039: The value or constructor 'P1' is not defined.

neg140.fs(146,22,146,69): typecheck error FS0001: The types 'int32, uint32' do not support the operator '+'

neg140.fs(146,25,146,27): typecheck error FS0039: The value or constructor 'P1' is not defined.

neg140.fs(147,22,147,68): typecheck error FS0001: The types 'int32, uint32' do not support the operator '+'

neg140.fs(147,25,147,27): typecheck error FS0039: The value or constructor 'P1' is not defined.

neg140.fs(148,22,148,69): typecheck error FS0001: The types 'int32, uint32' do not support the operator '+'

neg140.fs(148,25,148,27): typecheck error FS0039: The value or constructor 'P1' is not defined.

neg140.fs(149,22,149,69): typecheck error FS0001: The types 'int32, uint32' do not support the operator '+'

neg140.fs(149,25,149,27): typecheck error FS0039: The value or constructor 'P1' is not defined.

neg140.fs(150,22,150,69): typecheck error FS0001: The types 'int32, uint32' do not support the operator '+'

neg140.fs(150,25,150,27): typecheck error FS0039: The value or constructor 'P1' is not defined.

neg140.fs(151,22,151,68): typecheck error FS0001: The types 'int32, uint32' do not support the operator '+'

neg140.fs(151,25,151,27): typecheck error FS0039: The value or constructor 'P1' is not defined.

neg140.fs(152,22,152,69): typecheck error FS0001: The types 'int32, uint32' do not support the operator '+'

neg140.fs(152,25,152,27): typecheck error FS0039: The value or constructor 'P1' is not defined.

neg140.fs(153,22,153,70): typecheck error FS0001: The types 'int32, uint32' do not support the operator '+'

neg140.fs(153,25,153,27): typecheck error FS0039: The value or constructor 'P1' is not defined.

neg140.fs(154,22,154,70): typecheck error FS0001: The types 'int32, uint32' do not support the operator '+'

neg140.fs(154,25,154,27): typecheck error FS0039: The value or constructor 'P1' is not defined.

neg140.fs(155,22,155,69): typecheck error FS0001: The types 'int32, uint32' do not support the operator '+'

neg140.fs(155,25,155,27): typecheck error FS0039: The value or constructor 'P1' is not defined.

neg140.fs(156,22,156,70): typecheck error FS0001: The types 'int32, uint32' do not support the operator '+'

neg140.fs(156,25,156,27): typecheck error FS0039: The value or constructor 'P1' is not defined.

neg140.fs(157,22,157,70): typecheck error FS0001: The types 'int32, uint32' do not support the operator '+'

neg140.fs(157,25,157,27): typecheck error FS0039: The value or constructor 'P1' is not defined.

neg140.fs(158,22,158,70): typecheck error FS0001: The types 'int32, uint32' do not support the operator '+'

neg140.fs(158,25,158,27): typecheck error FS0039: The value or constructor 'P1' is not defined.

neg140.fs(160,22,160,68): typecheck error FS0001: The types 'int32, uint32' do not support the operator '+'

neg140.fs(160,25,160,27): typecheck error FS0039: The value or constructor 'P2' is not defined.

neg140.fs(161,22,161,68): typecheck error FS0001: The types 'int32, uint32' do not support the operator '+'

neg140.fs(161,25,161,27): typecheck error FS0039: The value or constructor 'P2' is not defined.

neg140.fs(162,22,162,70): typecheck error FS0001: The types 'int32, uint32' do not support the operator '+'

neg140.fs(162,25,162,27): typecheck error FS0039: The value or constructor 'P2' is not defined.

neg140.fs(163,22,163,69): typecheck error FS0001: The types 'int32, uint32' do not support the operator '+'

neg140.fs(163,25,163,27): typecheck error FS0039: The value or constructor 'P2' is not defined.

neg140.fs(164,22,164,68): typecheck error FS0001: The types 'int32, uint32' do not support the operator '+'

neg140.fs(164,25,164,27): typecheck error FS0039: The value or constructor 'P2' is not defined.

neg140.fs(165,22,165,69): typecheck error FS0001: The types 'int32, uint32' do not support the operator '+'

neg140.fs(165,25,165,27): typecheck error FS0039: The value or constructor 'P2' is not defined.

neg140.fs(166,22,166,70): typecheck error FS0001: The types 'int32, uint32' do not support the operator '+'

neg140.fs(166,25,166,27): typecheck error FS0039: The value or constructor 'P2' is not defined.

neg140.fs(167,22,167,69): typecheck error FS0001: The types 'int32, uint32' do not support the operator '+'

neg140.fs(167,25,167,27): typecheck error FS0039: The value or constructor 'P2' is not defined.

neg140.fs(168,22,168,68): typecheck error FS0001: The types 'int32, uint32' do not support the operator '+'

neg140.fs(168,25,168,27): typecheck error FS0039: The value or constructor 'P2' is not defined.

neg140.fs(169,22,169,69): typecheck error FS0001: The types 'int32, uint32' do not support the operator '+'

neg140.fs(169,25,169,27): typecheck error FS0039: The value or constructor 'P2' is not defined.

neg140.fs(170,22,170,69): typecheck error FS0001: The types 'int32, uint32' do not support the operator '+'

neg140.fs(170,25,170,27): typecheck error FS0039: The value or constructor 'P2' is not defined.

neg140.fs(171,22,171,69): typecheck error FS0001: The types 'int32, uint32' do not support the operator '+'

neg140.fs(171,25,171,27): typecheck error FS0039: The value or constructor 'P2' is not defined.

neg140.fs(172,22,172,69): typecheck error FS0001: The types 'int32, uint32' do not support the operator '+'

neg140.fs(172,25,172,27): typecheck error FS0039: The value or constructor 'P2' is not defined.

neg140.fs(173,22,173,68): typecheck error FS0001: The types 'int32, uint32' do not support the operator '+'

neg140.fs(173,25,173,27): typecheck error FS0039: The value or constructor 'P2' is not defined.

neg140.fs(174,22,174,69): typecheck error FS0001: The types 'int32, uint32' do not support the operator '+'

neg140.fs(174,25,174,27): typecheck error FS0039: The value or constructor 'P2' is not defined.

neg140.fs(175,22,175,70): typecheck error FS0001: The types 'int32, uint32' do not support the operator '+'

neg140.fs(175,25,175,27): typecheck error FS0039: The value or constructor 'P2' is not defined.

neg140.fs(177,22,177,68): typecheck error FS0001: The types 'int32, uint32' do not support the operator '+'

neg140.fs(177,25,177,27): typecheck error FS0039: The value or constructor 'P3' is not defined.

neg140.fs(178,22,178,69): typecheck error FS0001: The types 'int32, uint32' do not support the operator '+'

neg140.fs(178,25,178,27): typecheck error FS0039: The value or constructor 'P3' is not defined.

neg140.fs(179,22,179,70): typecheck error FS0001: The types 'int32, uint32' do not support the operator '+'

neg140.fs(179,25,179,27): typecheck error FS0039: The value or constructor 'P3' is not defined.

neg140.fs(180,22,180,70): typecheck error FS0001: The types 'int32, uint32' do not support the operator '+'

neg140.fs(180,25,180,27): typecheck error FS0039: The value or constructor 'P3' is not defined.

neg140.fs(181,22,181,68): typecheck error FS0001: The types 'int32, uint32' do not support the operator '+'

neg140.fs(181,25,181,27): typecheck error FS0039: The value or constructor 'P3' is not defined.

neg140.fs(182,22,182,69): typecheck error FS0001: The types 'int32, uint32' do not support the operator '+'

neg140.fs(182,25,182,27): typecheck error FS0039: The value or constructor 'P3' is not defined.

neg140.fs(183,22,183,69): typecheck error FS0001: The types 'int32, uint32' do not support the operator '+'

neg140.fs(183,25,183,27): typecheck error FS0039: The value or constructor 'P3' is not defined.

neg140.fs(184,22,184,70): typecheck error FS0001: The types 'int32, uint32' do not support the operator '+'

neg140.fs(184,25,184,27): typecheck error FS0039: The value or constructor 'P3' is not defined.

neg140.fs(185,22,185,69): typecheck error FS0001: The types 'int32, uint32' do not support the operator '+'

neg140.fs(185,25,185,27): typecheck error FS0039: The value or constructor 'P3' is not defined.

neg140.fs(186,22,186,69): typecheck error FS0001: The types 'int32, uint32' do not support the operator '+'

neg140.fs(186,25,186,27): typecheck error FS0039: The value or constructor 'P3' is not defined.

neg140.fs(187,22,187,69): typecheck error FS0001: The types 'int32, uint32' do not support the operator '+'

neg140.fs(187,25,187,27): typecheck error FS0039: The value or constructor 'P3' is not defined.

neg140.fs(188,22,188,69): typecheck error FS0001: The types 'int32, uint32' do not support the operator '+'

neg140.fs(188,25,188,27): typecheck error FS0039: The value or constructor 'P3' is not defined.

neg140.fs(189,22,189,68): typecheck error FS0001: The types 'int32, uint32' do not support the operator '+'

neg140.fs(189,25,189,27): typecheck error FS0039: The value or constructor 'P3' is not defined.

neg140.fs(190,22,190,70): typecheck error FS0001: The types 'int32, uint32' do not support the operator '+'

neg140.fs(190,25,190,27): typecheck error FS0039: The value or constructor 'P3' is not defined.

neg140.fs(191,22,191,70): typecheck error FS0001: The types 'int32, uint32' do not support the operator '+'

neg140.fs(191,25,191,27): typecheck error FS0039: The value or constructor 'P3' is not defined.

neg140.fs(192,22,192,69): typecheck error FS0001: The types 'int32, uint32' do not support the operator '+'

neg140.fs(192,25,192,27): typecheck error FS0039: The value or constructor 'P3' is not defined.

neg140.fs(194,22,194,68): typecheck error FS0001: The types 'int32, uint32' do not support the operator '+'

neg140.fs(194,25,194,27): typecheck error FS0039: The value or constructor 'P4' is not defined.

neg140.fs(195,22,195,69): typecheck error FS0001: The types 'int32, uint32' do not support the operator '+'

neg140.fs(195,25,195,27): typecheck error FS0039: The value or constructor 'P4' is not defined.

neg140.fs(196,22,196,70): typecheck error FS0001: The types 'int32, uint32' do not support the operator '+'

neg140.fs(196,25,196,27): typecheck error FS0039: The value or constructor 'P4' is not defined.

neg140.fs(197,22,197,69): typecheck error FS0001: The types 'int32, uint32' do not support the operator '+'

neg140.fs(197,25,197,27): typecheck error FS0039: The value or constructor 'P4' is not defined.

neg140.fs(198,22,198,69): typecheck error FS0001: The types 'int32, uint32' do not support the operator '+'

neg140.fs(198,25,198,27): typecheck error FS0039: The value or constructor 'P4' is not defined.

neg140.fs(199,22,199,69): typecheck error FS0001: The types 'int32, uint32' do not support the operator '+'

neg140.fs(199,25,199,27): typecheck error FS0039: The value or constructor 'P4' is not defined.

neg140.fs(200,22,200,70): typecheck error FS0001: The types 'int32, uint32' do not support the operator '+'

neg140.fs(200,25,200,27): typecheck error FS0039: The value or constructor 'P4' is not defined.

neg140.fs(201,22,201,69): typecheck error FS0001: The types 'int32, uint32' do not support the operator '+'

neg140.fs(201,25,201,27): typecheck error FS0039: The value or constructor 'P4' is not defined.

neg140.fs(202,22,202,68): typecheck error FS0001: The types 'int32, uint32' do not support the operator '+'

neg140.fs(202,25,202,27): typecheck error FS0039: The value or constructor 'P4' is not defined.

neg140.fs(203,22,203,70): typecheck error FS0001: The types 'int32, uint32' do not support the operator '+'

neg140.fs(203,25,203,27): typecheck error FS0039: The value or constructor 'P4' is not defined.

neg140.fs(204,22,204,69): typecheck error FS0001: The types 'int32, uint32' do not support the operator '+'

neg140.fs(204,25,204,27): typecheck error FS0039: The value or constructor 'P4' is not defined.

neg140.fs(205,22,205,70): typecheck error FS0001: The types 'int32, uint32' do not support the operator '+'

neg140.fs(205,25,205,27): typecheck error FS0039: The value or constructor 'P4' is not defined.

neg140.fs(206,22,206,68): typecheck error FS0001: The types 'int32, uint32' do not support the operator '+'

neg140.fs(206,25,206,27): typecheck error FS0039: The value or constructor 'P4' is not defined.

neg140.fs(207,22,207,70): typecheck error FS0001: The types 'int32, uint32' do not support the operator '+'

neg140.fs(207,25,207,27): typecheck error FS0039: The value or constructor 'P4' is not defined.

neg140.fs(208,22,208,69): typecheck error FS0001: The types 'int32, uint32' do not support the operator '+'

neg140.fs(208,25,208,27): typecheck error FS0039: The value or constructor 'P4' is not defined.

neg140.fs(209,22,209,69): typecheck error FS0001: The types 'int32, uint32' do not support the operator '+'

neg140.fs(209,25,209,27): typecheck error FS0039: The value or constructor 'P4' is not defined.
